# evo-core

./: .gitignore  Cargo.toml  README.md
.ci/: shm_regressions.sh
.github/workflows/: performance_regression.yml  shm_regressions.yml
.specify/memory/: constitution.md
config/: axis_01.toml  axis_01_x.toml  axis_02.toml  axis_02_y.toml  axis_03_z.toml  axis_04_a.toml  axis_05_b.toml  axis_06_c.toml  axis_07_spindle.toml  axis_08_tailstock.toml  config.toml  io.toml  machine.toml  machine_legacy.toml  test_8axis.toml  test_cu.toml  test_io.toml
docs/: README.md  ROADMAP.md
docs/troubleshooting/: evo_common.md  evo_common_traint.rs  evo_shared_memory.md
evo/: Cargo.toml
evo/src/: main.rs
evo/tests/: watchdog_tests.rs
evo_api/: Cargo.toml
evo_api/src/: main.rs
evo_common/: Cargo.toml
evo_common/benches/: p2p_bench.rs
evo_common/src/: config.rs  consts.rs  hal.rs  lib.rs  prelude.rs  shm.rs  watchdog.rs
evo_common/src/control_unit/: command.rs  config.rs  control.rs  error.rs  homing.rs  mod.rs  safety.rs  shm.rs  state.rs
evo_common/src/hal/: config.rs  consts.rs  driver.rs  types.rs
evo_common/src/io/: config.rs  mod.rs  registry.rs  role.rs
evo_common/src/shm/: config.rs  consts.rs  conversions.rs  io_helpers.rs  p2p.rs  segments.rs
evo_common/tests/: config_tests.rs  integration_phase12.rs  p2p_integration.rs  p2p_unit.rs
evo_control_unit/: Cargo.toml
evo_control_unit/benches/: cycle_benchmark.rs  pid_benchmark.rs  recovery_benchmark.rs
evo_control_unit/src/: command.rs  config.rs  control.rs  cycle.rs  error.rs  lib.rs  main.rs  safety.rs  shm.rs  state.rs
evo_control_unit/src/command/: arbitration.rs  homing.rs  source_lock.rs
evo_control_unit/src/control/: dob.rs  feedforward.rs  filters.rs  lag.rs  output.rs  pid.rs
evo_control_unit/src/error/: propagation.rs
evo_control_unit/src/safety/: flags.rs  peripherals.rs  recovery.rs  stop.rs
evo_control_unit/src/shm/: reader.rs  segments.rs  writer.rs
evo_control_unit/src/state/: axis.rs  coupling.rs  gearbox.rs  loading.rs  machine.rs  motion.rs  operational.rs  power.rs  safety.rs
evo_control_unit/tests/: cu_shm_tests.rs  integration_tests.rs
evo_control_unit/tests/fixtures/: test_8axis.toml  test_cu.toml  test_io.toml
evo_control_unit/tests/integration/: control_accuracy.rs  coupling.rs  hot_reload.rs  mod.rs  safety_stop.rs  soak_24h.rs  startup.rs  startup_timing.rs
evo_dashboard/: Cargo.toml
evo_dashboard/src/: main.rs
evo_diagnostic/: Cargo.toml
evo_diagnostic/src/: main.rs
evo_grpc/: Cargo.toml
evo_grpc/src/: main.rs
evo_hal/: Cargo.toml
evo_hal/config/: machine.toml
evo_hal/config/axes/: axis_x.toml  axis_y.toml  axis_z.toml
evo_hal/src/: core.rs  driver_registry.rs  lib.rs  main.rs  main_old.rs  module_status.rs  shm.rs
evo_hal/src/drivers/: mod.rs
evo_hal/src/drivers/simulation/: driver.rs  io.rs  mod.rs  state.rs
evo_hal/src/drivers/simulation/physics/: axis.rs  mod.rs  referencing.rs
evo_hal/tests/: hal_shm_tests.rs
evo_hal_core/: Cargo.toml
evo_main/: Cargo.toml
evo_mqtt/: Cargo.toml
evo_mqtt/src/: main.rs
evo_recipe_executor/: Cargo.toml
evo_recipe_executor/src/: main.rs
evo_shared_memory/: Cargo.toml
evo_shared_memory/benches/: shm_concurrent_access.rs  shm_read_write_perf.rs
evo_shared_memory/examples/: shm_1_evo_integration.rs  shm_basic_usage1.rs  shm_basic_usage2.rs  shm_control_loop.rs  shm_high_throughput.rs  shm_monitor.rs  shm_reader.rs  shm_writer.rs
evo_shared_memory/src/: discovery.rs  error.rs  lib.rs  lifecycle.rs  monitoring.rs  reader.rs  segment.rs  version.rs  writer.rs
evo_shared_memory/src/data/: api.rs  control.rs  hal.rs  mod.rs  recipe.rs  system.rs
evo_shared_memory/src/platform/: linux.rs  mod.rs
evo_shared_memory/tests/: basic_functionality.rs  performance_tests.rs  rt_validation_integration.rs
evo_shm/: Cargo.toml
specs/002-shm-lifecycle/: plan.md  spec.md  tasks.md
specs/003-hal-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-hal-simulation/checklists/: requirements.md
specs/003-hal-simulation/contracts/: hal_driver_trait.md  shm_layout.md
specs/004-common-lib-setup/: plan.md  spec.md  tasks.md
specs/005-control-unit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-control-unit/checklists/: requirements.md  shm.md
specs/005-control-unit/contracts/: io-config.md  shm-segments.md  state-machines.md
specs/006-rt-shm-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-rt-shm-integration/checklists/: requirements.md
specs/006-rt-shm-integration/contracts/: config.md  segments.md
