[workspace]
resolver = "2"
members = [
   "evo",                  # Watchdog & Process Manager
   "evo_common",           # Shared types and definitions
   "evo_api",              # EVO API
   "evo_dashboard",        # GUI
   "evo_grpc",             # API Liaison: gRPC
   "evo_mqtt",             # API Liaison: MQTT
   "evo_recipe_executor",  # Recipe executor
   "evo_control_unit",     # Control unit
   "evo_hal",              # HAL Core
   "evo_diagnostic",       # Diagnostic
]

[workspace.dependencies]
# Shared library
evo_common = { path = "evo_common" }

# Serialization & config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9"

# Logging / tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0.18"

# Fixed-size collections (RT-safe)
heapless = { version = "0.9", features = ["serde"] }

# POSIX / Linux
nix = { version = "0.31.1", features = ["fs", "mman", "process", "sched", "signal", "time"] }
libc = "0.2.180"

# CLI
clap = { version = "4.5.59", features = ["derive"] }

# Static analysis
static_assertions = "1.1"
bitflags = "2.11.0"

# Dev/bench
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.25.0"

[profile.release]
lto = true
opt-level = 3
panic = "abort"