[package]
name = "evo_common"
version = "0.1.0"
edition = "2024"
authors = ["RTS007"]
description = "Common library with shared constants and configuration for EVO workspace"
license = "AGPL3"
repository = "https://github.com/RTS007/evo-core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4.29", features = ["serde"] }
thiserror = "2.0"
toml = "0.9.8"
bitflags = "2.9"
heapless = { version = "0.9.2", features = ["serde"] }
static_assertions = "1.1"

[dev-dependencies]
tempfile = "3.20"
