[package]
name = "evo_common"
version = "0.1.0"
edition = "2024"
authors = ["RTS007"]
description = "Common library with shared constants and configuration for EVO workspace"
license = "AGPL3"
repository = "https://github.com/RTS007/evo-core"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
bitflags = { workspace = true }
heapless = { workspace = true }
static_assertions = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "p2p_bench"
harness = false
