[package]
name = "evo_control_unit"
version = "0.1.0"
edition = "2024"

[features]
default = []
rt = []  # Enable PREEMPT_RT scheduling (production only)

[dependencies]
evo_common = { path = "../evo_common" }
evo_shared_memory = { path = "../evo_shared_memory" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
nix = { version = "0.29", features = ["sched", "mman", "time", "signal"] }
libc = "0.2"
heapless = { version = "0.8", features = ["serde"] }
bitflags = "2.9"
static_assertions = "1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.20"

[[bench]]
name = "cycle_benchmark"
harness = false

[[bench]]
name = "pid_benchmark"
harness = false

[[bench]]
name = "recovery_benchmark"
harness = false
