[package]
name = "evo_control_unit"
version = "0.1.0"
edition = "2024"

[features]
default = []
rt = []  # Enable PREEMPT_RT scheduling (production only)

[dependencies]
evo_common = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
heapless = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = "3.4"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "cycle_benchmark"
harness = false

[[bench]]
name = "pid_benchmark"
harness = false

[[bench]]
name = "recovery_benchmark"
harness = false
