[package]
name = "evo_hal"
version = "0.1.0"
edition = "2024"
description = "Hardware Abstraction Layer Core with pluggable driver architecture"
license = "AGPL3"
repository = "https://github.com/RTS007/evo-core"

[[bin]]
name = "evo_hal"
path = "src/main.rs"

[lib]
name = "evo_hal"
path = "src/lib.rs"

[dependencies]
evo_common = { path = "../evo_common" }
evo_shared_memory = { path = "../evo_shared_memory" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
libc = "0.2"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3"
