[package]
name = "evo_hal"
version = "0.1.0"
edition = "2024"
description = "Hardware Abstraction Layer Core with pluggable driver architecture"
license = "AGPL3"
repository = "https://github.com/RTS007/evo-core"

[[bin]]
name = "evo_hal"
path = "src/main.rs"

[lib]
name = "evo_hal"
path = "src/lib.rs"

[dependencies]
evo_common = { path = "../evo_common" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bincode = "1.3.3"
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
ctrlc = "3.4"

[dev-dependencies]
tempfile = { workspace = true }
nix = { workspace = true }
