[package]
name = "evo_shared_memory"
version = "0.1.0"
edition = "2024"
authors = ["RTS007"]
description = "Foundational shm lifecycle management"
license = "AGPL3"
repository = "https://github.com/RTS007/evo-core"

[features]
default = []
rt = ["nix/process"]

[dependencies]
libc = "0.2.150"
memmap2 = "0.9"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.30.1", features = ["process", "mman", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.17"
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
proptest = "1.4"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
rand = "0.8"

[[bench]]
name = "shm_read_write_perf"
harness = false

[[bench]]
name = "shm_concurrent_access"
harness = false